[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Main/Agent/Behaviors/Raven.gd" type="Script" id=1]
[ext_resource path="res://Assets/2D/entities/raven-sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ase/Raven_shield.png" type="Texture" id=3]
[ext_resource path="res://Assets/Png/vfx/raven_skill_1_shot.png" type="Texture" id=4]
[ext_resource path="res://Assets/Png/vfx/raven_skill_2-Sheet.png" type="Texture" id=5]

[sub_resource type="Animation" id=5]
resource_name = "dash_attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "raven_skill_impact_S"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ImpactHitbox/South:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "IDLE" ],
"method": "change_state"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ImpactHitbox/VFX:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ImpactHitbox/VFX:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="AnimationNodeStateMachine" id=3]

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[sub_resource type="Animation" id=9]
resource_name = "attack_S"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "IDLE" ],
"method": "change_state"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="RavenBehavior" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="UltiDurationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="RavenShieldTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash_attack = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/raven_skill_impact_S = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 3 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 4 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10
vframes = 10

[node name="CollisionShapeTask" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 7 )
shape = SubResource( 1 )

[node name="DashHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 64

[node name="CollisionShape" type="CollisionShape2D" parent="DashHitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )
disabled = true

[node name="ImpactHitbox" type="Area2D" parent="."]
position = Vector2( 0, 7 )
collision_layer = 128
collision_mask = 64

[node name="South" type="CollisionPolygon2D" parent="ImpactHitbox"]
visible = false
polygon = PoolVector2Array( -22, 4, -23, 11, -18, 19, -9, 23, -2, 25, 2, 25, 9, 23, 18, 19, 22, 12, 21, 4, 4, 10, -6, 10 )
disabled = true

[node name="VFX" type="Sprite" parent="ImpactHitbox"]
visible = false
position = Vector2( 0, -7 )
z_index = 99
texture = ExtResource( 4 )
hframes = 5
frame = 4

[node name="Shield" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -3 )
texture = ExtResource( 3 )

[node name="Sword" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="SwordSprite" type="Sprite" parent="Sword"]
z_index = 99
texture = ExtResource( 5 )
hframes = 9
frame = 7

[node name="SwordAnimationPlayer" type="AnimationPlayer" parent="Sword/SwordSprite"]
autoplay = "idle"
anims/attack_S = SubResource( 9 )
anims/idle = SubResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sword"]
visible = false
polygon = PoolVector2Array( -22, 7, -21, 16, -18, 21, -9, 24, 15, 24, 19, 22, 19, 18, 14, 12, 10, 7, 9, 12, -6, 14 )

[connection signal="timeout" from="Timers/UltiDurationTimer" to="." method="_on_Ulti_timeout"]
[connection signal="timeout" from="Timers/RavenShieldTimer" to="." method="_on_RavenShieldTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DashHitbox" to="." method="_on_DashHitbox_body_entered"]
[connection signal="body_entered" from="ImpactHitbox" to="." method="_on_ImpactHitbox_body_entered"]
[connection signal="body_entered" from="Sword" to="." method="_on_Sword_body_entered"]
